# bigint

./: .gitignore  CMakeLists.txt  README.md  bigint.h
tests/: test1.c  test2.c  test3.c
